internal/parser/y.output

state 0
	$accept: .logLine $end 

	TIMESTAMP  shift 4
	.  error

	connectingLine  goto 2
	connectedLine  goto 3
	logLine  goto 1

state 1
	$accept:  logLine.$end 

	$end  accept
	.  error


state 2
	logLine:  connectingLine.    (1)

	.  reduce 1 (src line 33)


state 3
	logLine:  connectedLine.    (2)

	.  reduce 2 (src line 37)


state 4
	connectingLine:  TIMESTAMP.TOK_PIPE player TOK_IS TOK_CONNECTING 
	connectedLine:  TIMESTAMP.TOK_PIPE player TOK_IS TOK_CONNECTED 

	TOK_PIPE  shift 5
	.  error


state 5
	connectingLine:  TIMESTAMP TOK_PIPE.player TOK_IS TOK_CONNECTING 
	connectedLine:  TIMESTAMP TOK_PIPE.player TOK_IS TOK_CONNECTED 

	TOK_PLAYER  shift 7
	.  error

	player  goto 6

state 6
	connectingLine:  TIMESTAMP TOK_PIPE player.TOK_IS TOK_CONNECTING 
	connectedLine:  TIMESTAMP TOK_PIPE player.TOK_IS TOK_CONNECTED 

	TOK_IS  shift 8
	.  error


state 7
	player:  TOK_PLAYER.STRING TOK_LEFT_PAREN ID TOK_RIGHT_PAREN 
	player:  TOK_PLAYER.STRING TOK_LEFT_PAREN ID position TOK_RIGHT_PAREN 

	STRING  shift 9
	.  error


state 8
	connectingLine:  TIMESTAMP TOK_PIPE player TOK_IS.TOK_CONNECTING 
	connectedLine:  TIMESTAMP TOK_PIPE player TOK_IS.TOK_CONNECTED 

	TOK_CONNECTING  shift 10
	TOK_CONNECTED  shift 11
	.  error


state 9
	player:  TOK_PLAYER STRING.TOK_LEFT_PAREN ID TOK_RIGHT_PAREN 
	player:  TOK_PLAYER STRING.TOK_LEFT_PAREN ID position TOK_RIGHT_PAREN 

	TOK_LEFT_PAREN  shift 12
	.  error


state 10
	connectingLine:  TIMESTAMP TOK_PIPE player TOK_IS TOK_CONNECTING.    (3)

	.  reduce 3 (src line 42)


state 11
	connectedLine:  TIMESTAMP TOK_PIPE player TOK_IS TOK_CONNECTED.    (4)

	.  reduce 4 (src line 52)


state 12
	player:  TOK_PLAYER STRING TOK_LEFT_PAREN.ID TOK_RIGHT_PAREN 
	player:  TOK_PLAYER STRING TOK_LEFT_PAREN.ID position TOK_RIGHT_PAREN 

	ID  shift 13
	.  error


state 13
	player:  TOK_PLAYER STRING TOK_LEFT_PAREN ID.TOK_RIGHT_PAREN 
	player:  TOK_PLAYER STRING TOK_LEFT_PAREN ID.position TOK_RIGHT_PAREN 

	TOK_RIGHT_PAREN  shift 14
	TOK_POS  shift 16
	.  error

	position  goto 15

state 14
	player:  TOK_PLAYER STRING TOK_LEFT_PAREN ID TOK_RIGHT_PAREN.    (5)

	.  reduce 5 (src line 62)


state 15
	player:  TOK_PLAYER STRING TOK_LEFT_PAREN ID position.TOK_RIGHT_PAREN 

	TOK_RIGHT_PAREN  shift 17
	.  error


state 16
	position:  TOK_POS.TOK_LEFT_ARROW FLOAT TOK_COMMA FLOAT TOK_COMMA FLOAT TOK_RIGHT_ARROW 

	TOK_LEFT_ARROW  shift 18
	.  error


state 17
	player:  TOK_PLAYER STRING TOK_LEFT_PAREN ID position TOK_RIGHT_PAREN.    (6)

	.  reduce 6 (src line 71)


state 18
	position:  TOK_POS TOK_LEFT_ARROW.FLOAT TOK_COMMA FLOAT TOK_COMMA FLOAT TOK_RIGHT_ARROW 

	FLOAT  shift 19
	.  error


state 19
	position:  TOK_POS TOK_LEFT_ARROW FLOAT.TOK_COMMA FLOAT TOK_COMMA FLOAT TOK_RIGHT_ARROW 

	TOK_COMMA  shift 20
	.  error


state 20
	position:  TOK_POS TOK_LEFT_ARROW FLOAT TOK_COMMA.FLOAT TOK_COMMA FLOAT TOK_RIGHT_ARROW 

	FLOAT  shift 21
	.  error


state 21
	position:  TOK_POS TOK_LEFT_ARROW FLOAT TOK_COMMA FLOAT.TOK_COMMA FLOAT TOK_RIGHT_ARROW 

	TOK_COMMA  shift 22
	.  error


state 22
	position:  TOK_POS TOK_LEFT_ARROW FLOAT TOK_COMMA FLOAT TOK_COMMA.FLOAT TOK_RIGHT_ARROW 

	FLOAT  shift 23
	.  error


state 23
	position:  TOK_POS TOK_LEFT_ARROW FLOAT TOK_COMMA FLOAT TOK_COMMA FLOAT.TOK_RIGHT_ARROW 

	TOK_RIGHT_ARROW  shift 24
	.  error


state 24
	position:  TOK_POS TOK_LEFT_ARROW FLOAT TOK_COMMA FLOAT TOK_COMMA FLOAT TOK_RIGHT_ARROW.    (7)

	.  reduce 7 (src line 83)


20 terminals, 6 nonterminals
8 grammar rules, 25/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
55 working sets used
memory: parser 4/240000
0 extra closures
19 shift entries, 1 exceptions
5 goto entries
0 entries saved by goto default
Optimizer space used: output 24/240000
24 table entries, 0 zero
maximum spread: 20, maximum offset: 19
